[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GameMenu.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_top = 0.471939
margin_right = 90.0
margin_bottom = 160.472
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 5.0
margin_top = 65.0
margin_right = 84.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePanel" type="PanelContainer" parent="Control/Panel"]
margin_right = 79.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMiniGame" type="Button" parent="Control/Panel/GamePanel"]
margin_left = 6.0
margin_top = 4.0
margin_right = 73.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Control"]
margin_left = 4.0
margin_top = 5.52806
margin_right = 17.0
margin_bottom = 19.5281
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Control"]
margin_left = 4.0
margin_top = 120.528
margin_right = 21.0
margin_bottom = 139.528
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="Control"]
margin_left = 67.0
margin_top = 120.528
margin_right = 84.0
margin_bottom = 139.528
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Panel/GamePanel/StartMiniGame" to="." method="_on_StartMiniGame_pressed"]
[connection signal="pressed" from="Control/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Control/Next" to="." method="_on_Next_pressed"]
